styles.css
  
/*************************************************
 *  Hugo Academic: an academic theme for Hugo.
 *  Designed by @GeorgeCushen.
 *  https://github.com/gcushen/hugo-academic
 **************************************************/

/*************************************************
 *  Core
 **************************************************/

*,
*::after,
*::before {
  box-sizing: border-box;
}

.row:after,
.row:before {
  content: " ";
  display: table;
}

html {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  color: rgba(0,0,0,0.8);
  line-height: 1.65;
}
@media screen and (min-width: 58em) {
  html {
    font-size: 20px;
  }
}

body {
  font-family: inherit;
  font-size: 1rem;
  line-height: inherit;
  color: inherit;
  background-color: rgb(40, 42, 54);
  margin-top: 71px; /* Offset body content by navbar height. */
  padding-top: 0;
  counter-reset: captions;
}
@media screen and (max-width: 1200px) { /* Match max-width of .nav-bar query. */
  body {
    margin-top: 51px; /* Offset body content by navbar height. */
  }
}

.max-width-640 {
  max-width: 640px;
}

.margin-auto {
  margin-left: auto;
  margin-right: auto;
}

.center-text {
  text-align: center;
}

/* Body text */
p {
  margin-top: 0;
  margin-bottom: 1rem;
}

/* Lists */
ul, ol, dl {
  margin-top: 0;
  margin-bottom: 1rem;
}

/* Navigation bar text */
.navbar-default {
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  line-height: 1.25;
  text-rendering: optimizeLegibility;
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  margin-bottom: .5rem;
  line-height: 1.25;
  color: #313131;
  text-rendering: optimizeLegibility;
}
h1 {
  font-size: 2.25rem;
}
h2 {
  margin-top: 1rem;
  font-size: 1.5rem;
}
h3 {
  font-weight: 700;
  margin-top: 1.5rem;
  font-size: 1.25rem;
}
h4, h5, h6 {
  font-weight: 700;
  margin-top: 1rem;
  font-size: 1rem;
}

a,
h3.article-title a:hover {
  color: hsl(339, 90%, 68%);
  text-decoration: none;
  transition: color 0.6s ease;
}

a:hover,
a:focus {
  color: hsl(339, 90%, 68%);
}

img,
video {
  height: auto;
  max-width: 100%;
  display: block;
}

video {
  width: 100%;
  height: auto;
  max-height: 400px;
}

.img-responsive {
  /* Extend Bootstrap declaration with centering. */
  margin: 0 auto;
}

figcaption:before {
  font-weight: 700;
  text-transform: uppercase;
  content: "Figure " counter(captions) ": ";
}

figcaption {
  display: block;
  margin-top: 0.75em;
  line-height: 1.25;
  font-size: 1rem;
  margin-bottom: 1.65rem;
  font-family: 'Montserrat', sans-serif;
  counter-increment: captions;
}

figcaption h4 {
  display: inline-block;
  font-size: 1rem;
  font-weight: 400;
  margin: 0;
}

pre,
code {
  font-family: 'Roboto Mono', monospace;
  color: #c7254e;
  background-color: #f9f2f4;
}

pre {
  margin: 0 0 1rem 0;
  overflow: auto;
  background-color: rgb(248, 248, 248); /* Match default highlight theme. */
  border-color: rgb(248, 248, 248);
}

hr {
  border: 0;
  height: 1px;
  background: #333;
  background-image: linear-gradient(to right, #ccc, #333, #ccc);
}

/* Quotes */
blockquote {
  padding: .5rem 1rem;
  margin: .8rem 0;
  color: #7a7a7a;
  border-left: .25rem solid #e5e5e5;
}
blockquote p:last-child {
  margin-bottom: 0;
}
@media (min-width: 30em) {
  blockquote {
    padding-right: 5rem;
    padding-left: 1.25rem;
  }
}

.space-below {
  margin-bottom: 50px;
}
@media screen and (max-width: 768px) {
  .space-below {
    margin-bottom: 10px;
  }
}

.universal-wrapper {
  margin: 0 auto;
  padding-right: 15px;
  padding-left: 15px;
  width: 100%;
}
@media only screen and (min-width: 1001px) {
  .universal-wrapper {
    width: 1000px;
  }
}

small,
.small {
  font-size: .75em;
}

/*************************************************
 *  Modals.
 **************************************************/

.modal-header .close {
  font-size: 40px; /* Bigger cross. */
  height: 30px; /* Remove icon's vertical spacing. */
  overflow-y: hidden;
  position: relative;
  top: -5px;
}

.modal-content pre {
  margin: 0;
}

#modal-error {
  color: red;
}

/*************************************************
 *  Gallery.
 **************************************************/

.gallery {
  margin: 0.5em -4px 1.5em -4px;
  font-size: 0;
}

a[data-fancybox] {
  text-decoration: none;
}

a[data-fancybox] img {
  height: 250px;
  max-width: inherit;
  display: inherit;
  margin: 0;
  padding: 4px;
  box-shadow: none;
  vertical-align: inherit;
}

.fancybox-caption {
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: center;
}

/*************************************************
 *  Pager.
 **************************************************/

.post-nav {
  margin-top: 1rem;
  font-size: 0.8rem;
}

.post-nav-item {
  hyphens: auto;
  word-wrap: break-word;
  padding: 11px 0 12px;
  width: 100%;
}

.post-nav-item a {
  color: #2b2b2b;
  line-height: 1.7;
  text-transform: none;
}

.post-nav-item .meta-nav {
  color: #767676;
  font-weight: 900;
  line-height: 2;
  text-transform: uppercase;
}

.dark .post-nav-item a {
  color: #ddd;
}

/*************************************************
 *  Home Sections
 **************************************************/

@keyframes intro {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.home-section {
  background-color: hsla(231, 15%, 18%, 1);
  padding: 110px 0 110px 0;
  animation: intro 0.3s both;
  animation-delay: 0.15s;
}

.home-section:first-of-type {
  padding-top: 50px;
}

.home-section:nth-of-type(even) {
  background-color: hsla(231, 15%, 17%, 1);
}

@media screen and (max-width: 768px) {
  .home-section {
    padding: 60px 0 60px 0;
  }
  .home-section:first-of-type {
    padding-top: 40px;
  }
}

.section-heading h1 {
  margin: 0 0 10px 0;
}

.section-heading p {
  font-weight: 400;
  font-size: 1.1rem;
  color: #b2b2b2;
}
/* ... */

